@@ -2,6 +2,7 @@ DOMjudge Programming Contest Judging System
 
 Version 3.1.2 - SVN
 -------------------
+ - Fix missing permissions for plugin interface SQL user.
 
 Version 3.1.1 - 22 August 2010
 ------------------------------
